--- a/eshop-microservices/WebApp/Components/Layout/MainLayout.razor
+++ b/eshop-microservices/WebApp/Components/Layout/MainLayout.razor
@@ -16,6 +16,8 @@
     </main>
 </div>
 
+<ChatBox />
+
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
     <a href="." class="reload">Reload</a>
